--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <label class="btn btn-secondary active">
                         <input data-showhide="html" type="checkbox" checked autocomplete="off"> HTML
                     </label>
-                    <label class="btn btn-secondary">
-                        <input data-showhide="css" type="checkbox" autocomplete="off"> CSS
+                    <label class="btn btn-secondary active">
+                        <input data-showhide="css" type="checkbox" checked autocomplete="off"> CSS
                     </label>
                     <label class="btn btn-secondary active" style="margin-right:160px;">
                         <input data-showhide="output" type="checkbox" checked autocomplete="off"> Output
